[package]
name = "strust"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.197"
clap = "4.5.2"
libc = "0.2.110"
nix = "0.28.0"
unicode-width = "0.1.11"
signal-hook = "0.3.17"
mio = "0.8.11"
tokio = { version = "1.36.0", features = ["full"] }
crossterm = "0.27.0"